--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
     "webpack": "^1.12.13",
