--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.13.4",
     "path": "^0.12.7",
     "react": "^0.14.7",
+    "react-bootstrap": "^0.30.6",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
